Final analyses with additional line commented out
Added comment character on gender_SN_df.groupby('SN').count().

--- a/HeroesOfPymoli/HeroesOfPymoli.ipynb
+++ b/HeroesOfPymoli/HeroesOfPymoli.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -106,7 +106,7 @@
        "4                                       Fury   1.44  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +166,7 @@
        "0            576"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +229,7 @@
        "0                     179         $3.05                  780     $2,379.77"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -315,7 +315,7 @@
        "Other / Non-Disclosed           11      1.91%"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -325,7 +325,7 @@
     "# Percentage and Count of Other / Non-Disclosed\n",
     "\n",
     "# get just gender and SN, remove duplicates, create series for count and percent; note Age added for use later\n",
-    "gender_SN_df.groupby('SN').count()\n",
+    "#gender_SN_df.groupby('SN').count()\n",
     "\n",
     "gender_SN_df = purchase_data.loc[:, [\"Gender\", \"SN\", \"Age\"]]\n",
     "gender_SN_unique_df = gender_SN_df.drop_duplicates()\n",
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -424,7 +424,7 @@
        "Other / Non-Disclosed               $50.19                          $4.56  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -458,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -555,7 +555,7 @@
        "40+                12                 2.08%"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -591,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -704,7 +704,7 @@
        "40+                               $3.19  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -750,7 +750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -830,7 +830,7 @@
        "Iskadarya95               3                  $4.37               $13.10"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -878,112 +878,193 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th>Count</th>\n",
-       "      <th>Average Purchase Price</th>\n",
-       "      <th>Total Purchase Value</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Item ID</th>\n",
-       "      <th>Item Name</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>92</th>\n",
-       "      <th>Final Critic</th>\n",
-       "      <td>13</td>\n",
-       "      <td>$4.61</td>\n",
-       "      <td>$59.99</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>178</th>\n",
-       "      <th>Oathbreaker, Last Hope of the Breaking Storm</th>\n",
-       "      <td>12</td>\n",
-       "      <td>$4.23</td>\n",
-       "      <td>$50.76</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>145</th>\n",
-       "      <th>Fiery Glass Crusader</th>\n",
-       "      <td>9</td>\n",
-       "      <td>$4.58</td>\n",
-       "      <td>$41.22</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>132</th>\n",
-       "      <th>Persuasion</th>\n",
-       "      <td>9</td>\n",
-       "      <td>$3.22</td>\n",
-       "      <td>$28.99</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>108</th>\n",
-       "      <th>Extraction, Quickblade Of Trembling Hands</th>\n",
-       "      <td>9</td>\n",
-       "      <td>$3.53</td>\n",
-       "      <td>$31.77</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                                      Count  \\\n",
-       "Item ID Item Name                                             \n",
-       "92      Final Critic                                     13   \n",
-       "178     Oathbreaker, Last Hope of the Breaking Storm     12   \n",
-       "145     Fiery Glass Crusader                              9   \n",
-       "132     Persuasion                                        9   \n",
-       "108     Extraction, Quickblade Of Trembling Hands         9   \n",
-       "\n",
-       "                                                     Average Purchase Price  \\\n",
-       "Item ID Item Name                                                             \n",
-       "92      Final Critic                                                  $4.61   \n",
-       "178     Oathbreaker, Last Hope of the Breaking Storm                  $4.23   \n",
-       "145     Fiery Glass Crusader                                          $4.58   \n",
-       "132     Persuasion                                                    $3.22   \n",
-       "108     Extraction, Quickblade Of Trembling Hands                     $3.53   \n",
-       "\n",
-       "                                                     Total Purchase Value  \n",
-       "Item ID Item Name                                                          \n",
-       "92      Final Critic                                               $59.99  \n",
-       "178     Oathbreaker, Last Hope of the Breaking Storm               $50.76  \n",
-       "145     Fiery Glass Crusader                                       $41.22  \n",
-       "132     Persuasion                                                 $28.99  \n",
-       "108     Extraction, Quickblade Of Trembling Hands                  $31.77  "
-      ]
-     },
-     "execution_count": 57,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(0, 'Splinter')\n",
+      "(1, 'Crucifer')\n",
+      "(2, 'Verdict')\n",
+      "(3, 'Phantomlight')\n",
+      "(4, \"Bloodlord's Fetish\")\n",
+      "(5, 'Putrid Fan')\n",
+      "(6, 'Rusty Skull')\n",
+      "(7, 'Thorn, Satchel of Dark Souls')\n",
+      "(8, 'Purgatory, Gem of Regret')\n",
+      "(9, 'Thorn, Conqueror of the Corrupted')\n",
+      "(10, 'Sleepwalker')\n",
+      "(11, 'Brimstone')\n",
+      "(12, 'Dawne')\n",
+      "(13, 'Serenity')\n",
+      "(14, 'Possessed Core')\n",
+      "(15, 'Soul Infused Crystal')\n",
+      "(16, 'Restored Bauble')\n",
+      "(17, 'Lazarus, Terror of the Earth')\n",
+      "(18, 'Torchlight, Bond of Storms')\n",
+      "(19, 'Pursuit, Cudgel of Necromancy')\n",
+      "(20, 'Netherbane')\n",
+      "(21, 'Souleater')\n",
+      "(22, 'Amnesia')\n",
+      "(24, 'Warped Fetish')\n",
+      "(25, 'Hero Cane')\n",
+      "(26, 'Unholy Wand')\n",
+      "(27, 'Riddle, Tribute of Ended Dreams')\n",
+      "(28, 'Flux, Destroyer of Due Diligence')\n",
+      "(29, 'Chaos, Ender of the End')\n",
+      "(30, 'Stormcaller')\n",
+      "(31, 'Trickster')\n",
+      "(32, 'Orenmir')\n",
+      "(33, 'Curved Axe')\n",
+      "(34, 'Retribution Axe')\n",
+      "(35, 'Heartless Bone Dualblade')\n",
+      "(37, 'Shadow Strike, Glory of Ending Hope')\n",
+      "(38, 'The Void, Vengeance of Dark Magic')\n",
+      "(39, 'Betrayal, Whisper of Grieving Widows')\n",
+      "(40, 'Second Chance')\n",
+      "(41, 'Orbit')\n",
+      "(42, 'The Decapitator')\n",
+      "(43, 'Foul Edge')\n",
+      "(44, 'Bonecarvin Battle Axe')\n",
+      "(45, 'Glinting Glass Edge')\n",
+      "(46, 'Hopeless Ebon Dualblade')\n",
+      "(47, 'Alpha, Reach of Ending Hope')\n",
+      "(48, 'Rage, Legacy of the Lone Victor')\n",
+      "(49, 'The Oculus, Token of Lost Worlds')\n",
+      "(50, 'Dawn')\n",
+      "(51, 'Endbringer')\n",
+      "(52, 'Hatred')\n",
+      "(53, 'Vengeance Cleaver')\n",
+      "(54, 'Eternal Cleaver')\n",
+      "(55, 'Vindictive Glass Edge')\n",
+      "(56, 'Foul Titanium Battle Axe')\n",
+      "(57, 'Despair, Favor of Due Diligence')\n",
+      "(58, \"Freak's Bite, Favor of Holy Might\")\n",
+      "(59, 'Lightning, Etcher of the King')\n",
+      "(60, 'Wolf')\n",
+      "(61, 'Ragnarok')\n",
+      "(62, 'Piece Maker')\n",
+      "(63, 'Stormfury Mace')\n",
+      "(64, 'Fusion Pummel')\n",
+      "(65, 'Conqueror Adamantite Mace')\n",
+      "(66, 'Victor Iron Spikes')\n",
+      "(67, 'Celeste, Incarnation of the Corrupted')\n",
+      "(68, 'Storm-Weaver, Slayer of Inception')\n",
+      "(69, 'Frenzy, Defender of the Harvest')\n",
+      "(70, \"Hope's End\")\n",
+      "(71, 'Demise')\n",
+      "(72, \"Winter's Bite\")\n",
+      "(73, 'Ritual Mace')\n",
+      "(74, 'Yearning Crusher')\n",
+      "(75, 'Brutality Ivory Warmace')\n",
+      "(76, 'Haunted Bronzed Bludgeon')\n",
+      "(77, 'Piety, Guardian of Riddles')\n",
+      "(78, 'Glimmer, Ender of the Moon')\n",
+      "(79, 'Alpha, Oath of Zeal')\n",
+      "(80, 'Dreamsong')\n",
+      "(81, 'Dreamkiss')\n",
+      "(82, 'Nirvana')\n",
+      "(83, 'Lifebender')\n",
+      "(84, 'Arcane Gem')\n",
+      "(85, 'Malificent Bag')\n",
+      "(86, 'Stormfury Lantern')\n",
+      "(87, 'Deluge, Edge of the West')\n",
+      "(88, 'Emberling, Defender of Delusions')\n",
+      "(89, 'Blazefury, Protector of Delusions')\n",
+      "(90, 'Betrayer')\n",
+      "(91, 'Celeste')\n",
+      "(92, 'Final Critic')\n",
+      "(93, 'Apocalyptic Battlescythe')\n",
+      "(94, 'Mourning Blade')\n",
+      "(95, 'Singed Onyx Warscythe')\n",
+      "(96, 'Blood-Forged Skeletal Spine')\n",
+      "(97, 'Swan Song, Gouger Of Terror')\n",
+      "(98, 'Deadline, Voice Of Subtlety')\n",
+      "(99, 'Expiration, Warscythe Of Lost Worlds')\n",
+      "(100, 'Blindscythe')\n",
+      "(102, 'Avenger')\n",
+      "(103, 'Singed Scalpel')\n",
+      "(104, \"Gladiator's Glaive\")\n",
+      "(105, 'Hailstorm Shadowsteel Scythe')\n",
+      "(106, 'Crying Steel Sickle')\n",
+      "(107, 'Splitter, Foe Of Subtlety')\n",
+      "(108, 'Extraction, Quickblade Of Trembling Hands')\n",
+      "(109, 'Downfall, Scalpel Of The Emperor')\n",
+      "(110, 'Suspension')\n",
+      "(111, \"Misery's End\")\n",
+      "(112, 'Worldbreaker')\n",
+      "(113, \"Solitude's Reaver\")\n",
+      "(114, 'Yearning Mageblade')\n",
+      "(115, 'Spectral Diamond Doomblade')\n",
+      "(116, 'Renewed Skeletal Katana')\n",
+      "(117, 'Heartstriker, Legacy of the Light')\n",
+      "(118, 'Ghost Reaver, Longsword of Magic')\n",
+      "(119, 'Stormbringer, Dark Blade of Ending Misery')\n",
+      "(120, 'Agatha')\n",
+      "(121, 'Massacre')\n",
+      "(122, 'Unending Tyranny')\n",
+      "(123, \"Twilight's Carver\")\n",
+      "(124, 'Venom Claymore')\n",
+      "(125, 'Whistling Mithril Warblade')\n",
+      "(126, 'Exiled Mithril Longsword')\n",
+      "(127, 'Heartseeker, Reaver of Souls')\n",
+      "(128, 'Blazeguard, Reach of Eternity')\n",
+      "(129, 'Fate, Vengeance of Eternal Justice')\n",
+      "(130, 'Alpha')\n",
+      "(131, 'Fury')\n",
+      "(132, 'Persuasion')\n",
+      "(133, \"Faith's Scimitar\")\n",
+      "(134, 'Undead Crusader')\n",
+      "(135, 'Warped Diamond Crusader')\n",
+      "(136, 'Ghastly Adamantite Protector')\n",
+      "(137, 'Aetherius, Boon of the Blessed')\n",
+      "(138, 'Peacekeeper, Wit of Dark Magic')\n",
+      "(139, 'Mercy, Katana of Dismay')\n",
+      "(140, 'Striker')\n",
+      "(142, 'Righteous Might')\n",
+      "(143, 'Frenzied Scimitar')\n",
+      "(144, 'Blood Infused Guardian')\n",
+      "(145, 'Fiery Glass Crusader')\n",
+      "(146, 'Warped Iron Scimitar')\n",
+      "(147, 'Hellreaver, Heirloom of Inception')\n",
+      "(148, \"Warmonger, Gift of Suffering's End\")\n",
+      "(149, 'Tranquility, Razor of Black Magic')\n",
+      "(150, 'Deathraze')\n",
+      "(151, 'Severance')\n",
+      "(152, 'Darkheart')\n",
+      "(153, 'Mercenary Sabre')\n",
+      "(154, 'Feral Katana')\n",
+      "(155, 'War-Forged Gold Deflector')\n",
+      "(156, 'Soul-Forged Steel Shortsword')\n",
+      "(157, 'Spada, Etcher of Hatred')\n",
+      "(158, 'Darkheart, Butcher of the Champion')\n",
+      "(159, 'Oathbreaker, Spellblade of Trials')\n",
+      "(160, 'Azurewrath')\n",
+      "(161, 'Devine')\n",
+      "(162, 'Abyssal Shard')\n",
+      "(163, 'Thunderfury Scimitar')\n",
+      "(164, 'Exiled Doomblade')\n",
+      "(165, 'Bone Crushing Silver Skewer')\n",
+      "(166, 'Thirsty Iron Reaver')\n",
+      "(167, 'Malice, Legacy of the Queen')\n",
+      "(168, 'Sun Strike, Jaws of Twisted Visions')\n",
+      "(169, 'Interrogator, Blood Blade of the Queen')\n",
+      "(170, 'Shadowsteel')\n",
+      "(171, 'Scalpel')\n",
+      "(172, 'Blade of the Grave')\n",
+      "(173, 'Stormfury Longsword')\n",
+      "(174, 'Primitive Blade')\n",
+      "(175, 'Woeful Adamantite Claymore')\n",
+      "(176, 'Relentless Iron Skewer')\n",
+      "(177, 'Winterthorn, Defender of Shifting Worlds')\n",
+      "(178, 'Oathbreaker, Last Hope of the Breaking Storm')\n",
+      "(179, 'Wolf, Promise of the Moonwalker')\n",
+      "(181, \"Reaper's Toll\")\n",
+      "(182, 'Toothpick')\n",
+      "(183, \"Dragon's Greatsword\")\n"
+     ]
     }
    ],
    "source": [
@@ -1013,13 +1094,14 @@
     "\n",
     "itemsorted_df.head()\n",
     "\n",
-    "#type(total_price_df)\n",
+    "for index in total_price_df.index:\n",
+    "     print(index)\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1122,7 +1204,7 @@
        "103     Singed Scalpel                                             $34.80  "
       ]
      },
-     "execution_count": 76,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
